[package]
name = "one-time-password"
authors = ["John Hayes <jahayes@gmail.com>"]
description = "A command line to for managing and genterating one time passwords"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
base64 = "0.21.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.1.6", features = ["derive", "env", "suggestions", "cargo"] }
digest = "0.10.6"
hmac = "0.12.1"
home = "0.5.4"
image = "0.24.5"
keyring = "2.0.1"
rmp-serde = "1.1.1"
rqrr = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.6"
tempfile = "3.3.0"
thiserror = "1.0.38"
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.2"

[dev-dependencies]
hex = "0.4.3"
